# knowledge-pipeline

./: .env.example  .gitignore  README.md  docker-compose.yml  knowledge-pipeline-plan.md  pyproject.toml
.github/workflows/: ci.yml
config/: feeds.yaml  pipeline.yaml
config/prompts/: dedup_confirm_v1.md  dedup_confirm_v2.md  entities_confirm_v1.md  entities_extract_v1.md  extract_claims_v1.md  extract_claims_v2.md  extract_claims_v3.md  extract_claims_v4.md  triage_v2.md
dashboard/: app.py  executor.py
docker/: Dockerfile  litestream.yml
infra/: README.md  dns.tf  ec2.tf  iam.tf  network.tf  outputs.tf  s3.tf  terraform.tfvars.example  variables.tf  versions.tf
pipeline/: __init__.py  cli.py  config.py  eval_compare.py
pipeline/db/: __init__.py  claims_index.py  connection.py  controls.py  costs.py  entities_index.py  jobs.py  registry.py  schema.sql  vec_index.py
pipeline/ingestors/: annotate.py  email.py  paste.py
pipeline/llm/: __init__.py  base.py  openai_compat.py  prompts.py  registry.py
pipeline/orchestrator/: context.py  executor.py  handlers.py  stages.py  worker.py
pipeline/storage/: __init__.py  blobstore.py  manifest.py
pipeline/vault/: __init__.py  frontmatter_schema.py  writer.py
tests/: conftest.py  test_dashboard.py  test_dedup.py  test_derivers.py  test_email.py  test_entities.py  test_eval.py  test_llm.py  test_pipeline.py  test_registry.py
