[project]
name = "knowledge-pipeline"
version = "0.1.0"
description = "Batch-oriented ingestion → distillation → Obsidian vault pipeline with a SQLite control plane."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "python-frontmatter>=1.1",
    "boto3>=1.34",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "openai>=1.0",
    "python-dotenv>=1.0",
]

[project.scripts]
pipeline = "pipeline.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline", "dashboard"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
